--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="shortcut icon" href="pic1.jpeg" type="image/x-icon">
   <title>fomo-payment</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -29,36 +30,30 @@
 <button class="btn2">Login</button>
 </div>
 </nav>
-
-<!-- hero-section -->
-<!-- <div class="hero">
-<div class="pica">
-  <img src="pic2.svg" alt="">
-  <img src="pic3.svg" alt="">
-</div>
-<p>Global Payment Processed Locally</p>
-<p>Boost success rates with localised payment methods across the world</p>
-
-<div class="btn">
-<button class="btn1">Get Started</button>
-<button class="btn2">Talk To Founder</button>
-</div>
-
-</div> -->
+<!-- hero section -->
 
 
- <section class="hero">
-    <div class="badges">
-      <span class="badge"><img src="pic2.svg" alt=""></span>
-      <span class="badge"><img src="pic3.svg" alt=""></span>
-    </div>
-    <h1 class="heading">Global Payments Processed Locally</h1>
-    <p class="subheading">Boost success rates with localised payment methods across the world</p>
-    <div class="buttons">
-      <button class="btn primary">Get Started</button>
-      <button class="btn secondary">Talk to Founder</button>
-    </div>
-  </section>
+<section class="hero">
+  <div class="badges animate-up delay-1">
+    <span class="badge"><img src="pic2.svg" alt=""></span>
+    <span class="badge"><img src="pic3.svg" alt=""></span>
+  </div>
+  <h1 class="heading animate-up delay-2">Global Payments Processed Locally</h1>
+  <p class="subheading animate-up delay-3">Boost success rates with localised payment methods across the world</p>
+  <div class="buttons animate-up delay-4">
+    <button class="btn primary">Get Started</button>
+    <button class="btn secondary">Talk to Founder</button>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
 
 <div class="data">
   <img src="data.avif" alt="">
@@ -67,19 +62,38 @@
 <p class="dodo">Join 1000+ companies currently scaling their revenue globally </p>
 
 <!-- scroll ad -->
-<!--  
+
   <div class="banner-container">
     <div class="banner">
       <img src="img.avif" alt="">
             <img src="img2.avif" alt="">
                   <img src="img3.avif" alt="">
                         <img src="dLlvqVAEiXrAXlLqZhd4CYvlMk.avif" alt="">
+                        <img src="img3.avif" alt="">
+                        <img src="img4.avif" alt="">
+                        <img src="img3.avif" alt="">
+                        <img src="img2.avif" alt="">
+                        <img src="img.avif" alt="">
 
 
 
     </div>
   </div>
- -->
+ 
+<!-- features -->
+
+<div class="features">
+  <h3 class="feat"><i class="fa-solid fa-star-of-life"></i>Benefits</h3>
+  <div class="fee2">
+  <p class="feep">The Global Merchant Of Road Platform You Need</p>
+  <p class="fe">Generate revenue seamlessly with Dodo Payments
+
+</p>
+</div>
+</div>
+
+<!-- fade out image -->
+
 
 
   </div> <!--container-->
