slider-image features

--- a/index.html
+++ b/index.html
@@ -92,7 +92,27 @@
 </div>
 </div>
 
-<!-- fade out image -->
+
+<div class="fade">
+  
+  <div class="image-slider">
+    <img src="ani1.webp" class="img img1" alt="Image 1">
+    <img src="ani2.webp" class="img img2" alt="Image 2">
+    <img src="ani3.webp" class="img img3" alt="Image 3">
+  </div>
+  <div class="fade-right">
+    <p class="fade-text line1"> <i class="fa-solid fa-clock"></i>Launch Global Business Within Minutes</p>
+    <p class="fade-text line2"> <i class="fa-solid fa-check"></i>Eliminates Payment Friction For Customers</p>
+    <p class="fade-text line3"> <i class="fa-solid fa-globe"></i>Automate Global Tax and Compliance</p>
+  </div>
+</div>
+
+<!-- left-right -->
+
+
+
+
+
 
 
 
