added new features

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
   
   <div class="image-slider">
     <img src="ani1.webp" class="img img1" alt="Image 1">
-    <img src="ani2.webp" class="img img2" alt="Image 2">
-    <img src="ani3.webp" class="img img3" alt="Image 3">
+    <img src="imma.avif" class="img img2" alt="Image 2">
+    <img src="imma2.avif" class="img img3" alt="Image 3">
   </div>
   <div class="fade-right">
     <p class="fade-text line1"> <i class="fa-solid fa-clock"></i>Launch Global Business Within Minutes</p>
@@ -108,6 +108,50 @@
 </div>
 
 <!-- left-right -->
+
+
+
+
+<div class="features">
+  <h3 class="feat"><i class="fa-solid fa-star-of-life"></i>Features</h3>
+  <div class="fee2">
+  <p class="feep">Everything You Need To Power Global Payments.</p>
+  <p class="fe">From checkout to compliance, we’ve got you covered.
+
+
+
+</p>
+</div>
+</div>
+
+
+<!-- features section -->
+
+<div class="feat-1">
+  <!-- left-div -->
+<div class="left-feat">
+
+  <img src="graph.webp" alt="">
+  <p class="graph">Automate and Scale Your Recurring Revenue</p>
+  <p class="graph-1">Manage subscriptions with ease using automated billing and renewals.
+
+</p>
+<a href="#">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+
+
+</div>
+<!-- right-div -->
+ <div class="right-feat">
+  <img src="left.webp" alt="">
+  <p class="graph">Automate and Scale Your Recurring Revenue</p>
+  <p class="graph-1">Manage subscriptions with ease using automated billing and renewals.
+
+</p>
+<a href="#">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+
+ </div>
+</div>
+
 
 
 
