--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   <p class="graph-1">Manage subscriptions with ease using automated billing and renewals.
 
 </p>
-<a href="#">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+<a href="#">Learn More <i class="fa-solid fa-arrow-right dodo"></i></a>
 
 
 </div>
@@ -147,12 +147,82 @@
   <p class="graph-1">Manage subscriptions with ease using automated billing and renewals.
 
 </p>
-<a href="#">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+<a href="#">Learn More <i class="fa-solid fa-arrow-right dodo"></i></a>
 
  </div>
 </div>
 
 <!-- globe -->
+
+<div class="globe-container">
+<div class="globe-left">
+  <img src="imma.avif" alt="" class="imma">
+   <p class="graph">Accepts Payments Globally , Effortlessly.</p>
+  <p class="graph-1">
+Support multiple currencies and payment methods with built-in fraud protection.
+
+
+</p>
+<a href="#">Learn More <i class="fa-solid fa-arrow-right dodo"></i></a>
+
+</div>
+<div class="globe-right">
+  <img src="globe.png" alt="" class="img-globe">
+</div>
+</div>
+
+<!-- again two box -->
+
+<div class="feat-2">
+  <!-- left-div -->
+<div class="left-feat">
+
+  <img src="ani1.webp" alt="">
+  <p class="graph">Frictionless Checkout For Your Customers.</p>
+  <p class="graph-1">Optimize conversion with a seamless and customizable checkout experience
+
+</p>
+<a href="#">Learn More <i class="fa-solid fa-arrow-right dodo"></i></a>
+
+
+</div>
+<!-- right-div -->
+ <div class="right-feat">
+  <img src="v8Y44a161MXwqbz4DL8BnQjgc.avif" alt="">
+  <p class="graph">Automate and Global Tax Compliance</p>
+  <p class="graph-1">Stay compliant with local tax laws while selling globally, 
+hassle-free.
+
+
+
+</p>
+<a href="#">Learn More <i class="fa-solid fa-arrow-right dodo"></i></a>
+
+ </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
