--- a/index.html
+++ b/index.html
@@ -204,17 +204,39 @@ hassle-free.
 
 
 
+<!-- documentations -->
 
 
 
 
+<div class="features">
+  <h3 class="feat"><i class="fa-solid fa-star-of-life"></i>documentations</h3>
+  <div class="fee2">
+  <p class="feep">Extensive documentations.</p>
+  <p class="fe">Our APIs and SDKs work with many programming languages, and our demo website show you common integration examples. 
+You'll find clear documentation covering implementation steps, security best practices, and advanced features.
+
+</p>
+</div>
+</div>
 
 
+<!-- documentation section -->
+
+<div class="doc">
+    <p class="graph">Dodo Payments APIs & SDKS</p>
+  <p class="graph-1">
+
+Our APIs and SDKs makes it easy to integrate secure, scalable, and versatile payment solutions into your applications
+
+</p>
+<a href="#">Learn More <i class="fa-solid fa-arrow-right dodo"></i></a>
+
+   <img src="code.avif" alt="" class="code">
+</div>
 
 
-
-
-
+<!-- documentation-map -->
 
 
 
